--- a/modulo-02/aulas/joaocurso/index.html
+++ b/modulo-02/aulas/joaocurso/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Curso de HTML e CSS</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="stylesheet" href="/styles.css"/>
-      
+    <link rel="stylesheet" href="/styles.css" />
   </head>
 
   <body>
@@ -17,15 +16,25 @@
         <a href="/">Aulas</a>
       </div>
     </header>
+
     <div id="wrapper">
       <img
         src="https://avatars.githubusercontent.com/u/74993246?s=460&u=b31cce90b8f7572455abc3597f0a930b5393a10c&v=4"
         alt="Dgeison Peixoto"
       />
+
       <h1>Dgeison S. Peixoto</h1>
       <h2>Instrutor nível 1.0</h2>
-      <p>Professor iniciante! Meu  <a href="https://github.com/dgeison">github</a>. Acesse e conheça!</p>
+      <p>
+        Professor iniciante! Meu
+        <a href="https://github.com/dgeison">github</a>. Acesse e conheça!
+      </p>
     </div>
-    
+
+    <div id="footer-links" class="links">
+      <a href="https://github.com/dgeison">Github</a>
+      <a href="https://twitter.com/dgeisonpeixoto">Twitter</a>
+      <a href="https://www.linkedin.com/in/dgeisondev/">Linkedin</a>
+    </div>
   </body>
 </html>
